--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,8 @@
-<div class="h1">
-  ごはんの日。ABOUTペーーーーーーじ
+<div class="row">
+    <div class="col-lg-12">
+        <div class="about">
+        <%= image_tag 'egg.jpeg', :size =>'1000x600' %>
+        <p><%= image_tag 'logoo.png', :size => '400x400' %><br>ごはんの日。</p>
+        </div>
+    </div>
 </div>
