--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,5 @@
-<div class="h1">
-  ごはんの日。TOPペーーーーじ！！
+<div class="row">
+    <div class="col-lg-12">
+        <%= image_tag 'egg.jpeg', :size =>'1000x600' %>
+    </div>
 </div>
