--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <%= image_tag 'egg.jpeg', :size =>'1000x600' %>
+        <%= image_tag 'logoo.png', :size => '600x600' %><br>
+        ごはんの日。
     </div>
 </div>
