--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -2,7 +2,11 @@
     <div class="col-lg-12">
         <div class="about">
         <%= image_tag 'egg.jpeg', :size =>'1000x600' %>
-        <p><%= image_tag 'logoo.png', :size => '400x400' %><br>ごはんの日。</p>
+        <p>ごはんの日。<br>
+        白米好きの<br>
+        白米好きによる<br>
+        白米好きのための<br>
+        おかず紹介サイト</p>
         </div>
     </div>
 </div>
