--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-            <li><%= link_to "新規投稿", new_post_path %></li>
+            <li><%= link_to "投稿一覧", posts_path %></li>
+            <li><%= link_to "カテゴリ一覧", categories_path %></li>
             <li><%= link_to "マイページ", user_path(current_user) %></li>
             <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
           <% else %>
