--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <%= render 'layouts/sidebar' %>
       <%= yield %>
     </div>
   </body>
