--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,58 @@
 <div class="row">
-  <div class="col-8">
-    <% @post.each do |post| %>
-<div>
-  <%= attachment_image_tag post_image, :image %>
-  <p>投稿画像：<%= image_tag('noimage.jpeg') %></p>
-  <p>タイトル：<%= post.title %></p>
-  <p>説明：<%= post.introduction %></p>
-  <p>ユーザーネーム：<%= post.user.name %></p>
-</div>
-<% end %>
+  <div class="col-md-3">
+    <%= form_with model: @post, local: true do |f| %>
+      <%= f.label :post_image, '画像' %>
+      <%= f.attachment_field :post_image, class: "form-control-file post_image" %>
+      <%= f.label :title, 'タイトル' %><br>
+      <%= f.text_field :title, class:'form-control' %><br>
+      <%= f.label :text, '本文' %><br>
+      <%= f.text_area :body, class:'form-control' %><br>
+      <div class="category-form">
+        <%= label_tag 'ジャンル' %>
+        <%= select_tag 'parent_id', options_for_select(@category_parent_array), id: 'parent-category', class: 'form-control' %>
+        <i class="fas fa-chevron-down"></i>
+      </div><br>
+      <%= collection_check_boxes(:book, :category_ids, Category.all, :id, :name) do |cb| %>
+        <%= cb.label { cb.check_box + ' ' + cb.text } %>
+      <% end %><br>
+      <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </div>
+  <div class="col-md-9">
+    <table class='table table-hover table-inverse'>
+      <thead>
+        <tr>
+          <th></th>
+          <th>画像</th>
+          <th>投稿者</th>
+          <th>タイトル</th>
+          <th>本文</th>
+          <th>カテゴリー</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= link_to post.user do %>
+                <%= attachment_image_tag(post.user, :post_image, :fill, 50, 50, fallback: "noimage.jpeg") %>
+                <% end %>
+            </td>
+            <td><%= link_to post.user do %>
+                <%= post.user.name %>
+                <% end %>
+            </td>
+            <td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
+            <td><%= post.text %></td>
+            <td><% book.categories.each do |category| %>
+                  <%= post.category.name %>
+                <% end %></td>
+            <td><% if post.user == current_user %>
+                <%= link_to '削除', post, method: :delete, data: { confirm: '本当に削除してもよろしいですか？' }, class: 'btn-sm btn-danger' %>
+                <% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
