--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,10 +3,10 @@
     <%= form_with model: @category, local: true do |f| %>
       <%= f.label :name, 'カテゴリー名' %><br>
       <%= f.text_field :name, class:'form-control' %><br>
-      <%= f.submit '追加', class: 'btn btn-primry btn-block' %>
+      <%= f.submit '追加', class: 'btn btn-success btn-block' %>
     <% end %>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-6">
     <table class='table table-hover table-inverse'>
       <thead>
         <tr>
