--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-8">新規投稿
+  <div class="col-8">
+    <h2>新規投稿</h2>
   <%= form_with model: @post, url:'/posts', local:true do |f| %>
   <div class="form_image">画像</div>
   <%= attachment_image_tag @post, :post_image, fallback: "noimage.jpeg", id: "img_prev", style: "height: 250px; width:300px;" %><br>
