--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
  <div class='row'>
-    <div class='col-8'>
+    <div class='col-md-9'>
       <h2>ユーザー情報</h2>
         <table class='table'>
           <tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "noimage.jpeg") %></tr>
@@ -12,12 +12,15 @@
         	  <th><%= @user.introduction %></th>
         	</tr>
         </table>
-        <% if current_user != user %>
+        <% if current_user != @user %>
           <% if current_user.following?(@user) %>
             <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete %>
           <% else %>
             <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST %>
           <% end %>
         <% end %>
-    </div>
   </div>
+</div>
+<div class='row'>
+  <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
+</div>
