--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-md-3">
-    <%= form_with model: @post, local: true do |f| %>
-      <%= f.label :post_image, '画像' %>
-      <%= f.attachment_field :post_image, class: "form-control-file post_image" %>
+    <%= form_with model: @post, remote: true do |f| %>
+      <%= f.label :post_image, '画像' %><br>
+      <%= f.attachment_field :post_image, class: "form-control" %><br>
       <%= f.label :title, 'タイトル' %><br>
       <%= f.text_field :title, class:'form-control' %><br>
       <%= f.label :text, '本文' %><br>
-      <%= f.text_area :body, class:'form-control' %><br>
+      <%= f.text_area :text, class:'form-control' %><br>
       <div class="category-form">
         <%= label_tag 'ジャンル' %>
-        <%= select_tag 'parent_id', options_for_select(@category_parent_array), id: 'parent-category', class: 'form-control' %>
+        <%= select_tag 'parent_id', options_for_select(@category_parent_array), id: 'parent-category', class: 'form-control post-category' %>
         <i class="fas fa-chevron-down"></i>
       </div><br>
       <%= collection_check_boxes(:book, :category_ids, Category.all, :id, :name) do |cb| %>
@@ -22,7 +22,6 @@
     <table class='table table-hover table-inverse'>
       <thead>
         <tr>
-          <th></th>
           <th>画像</th>
           <th>投稿者</th>
           <th>タイトル</th>
@@ -32,26 +31,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @posts.each do |post| %>
-          <tr>
-            <td><%= link_to post.user do %>
-                <%= attachment_image_tag(post.user, :post_image, :fill, 50, 50, fallback: "noimage.jpeg") %>
-                <% end %>
-            </td>
-            <td><%= link_to post.user do %>
-                <%= post.user.name %>
-                <% end %>
-            </td>
-            <td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
-            <td><%= post.text %></td>
-            <td><% book.categories.each do |category| %>
-                  <%= post.category.name %>
-                <% end %></td>
-            <td><% if post.user == current_user %>
-                <%= link_to '削除', post, method: :delete, data: { confirm: '本当に削除してもよろしいですか？' }, class: 'btn-sm btn-danger' %>
-                <% end %></td>
-          </tr>
-        <% end %>
+        <%= render 'post_new', posts: @posts, post: @post %>
       </tbody>
     </table>
   </div>
