--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,13 @@
 <div class="row">
   <div class="col-8">
     <h2>新規投稿</h2>
-  <%= form_with model: @post, url:'/posts', local:true do |f| %>
-  <div class="form_image">画像</div>
+  <%= form_with model: @post, url:'/posts', remote: true do |f| %>
+  <div class="form_image">画像投稿</div>
   <%= attachment_image_tag @post, :post_image, fallback: "noimage.jpeg", id: "img_prev", style: "height: 250px; width:300px;" %><br>
   <%= f.attachment_field :post_image %>
   <div class="form_title">タイトル</div>
   <%= f.text_field :title %>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
   <div class="form_text">内容</div>
   <%= f.text_area :text %>
   <%= f.submit '投稿' %>
