--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,14 @@
 <div class="row">
   <div class="col-md-8">
-    <%= attachment_image_tag @post, :post_image %>
+    <%= attachment_image_tag(@post, :post_image, :fill, 190, 190, fallback: "noimage.jpeg") %>
     <p>タイトル:<%= @post.title %></p>
     <p>説明:<%= @post.text %></p>
     <p>投稿日時:<%= @post.created_at.strftime('%Y/%m/%d') %></p>
+    <%= attachment_image_tag(@user, :profile_image, fallback: "noimage.jpeg", class:"profile-img-circle", size: "30x30")%>
+    <%= @user.name %>
+
+    <div id="show_favorite_<%= @post.id %>">
+      <%= render 'favorites/favorite', post: @post, posts: @posts %>
+    </div>
   </div>
 </div>
