--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,14 +12,20 @@
         	  <th><%= @user.introduction %></th>
         	</tr>
         </table>
-        <% if current_user != @user %>
-          <% if current_user.following?(@user) %>
-            <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete %>
-          <% else %>
-            <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST %>
+        <div class="follower">
+          <%= link_to followers_user_path(@user.id) do %>
+            <h5 style="color: black;">フォロワー数:<%= @user.followers.count %></h5>
           <% end %>
-        <% end %>
-  </div>
+        </div>
+        <div class="follow">
+          <%= link_to following_user_path(@user.id) do %>
+            <h5 style="color: black;">フォロー数:<%= @user.following.count %></h5>
+          <% end %>
+        </div>
+        <div>
+          <%= render "follow_form" %>
+        </div>
+    </div>
 </div>
 <div class='row'>
   <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
