--- a/app/views/posts/_post_new.html.erb
+++ b/app/views/posts/_post_new.html.erb
@@ -10,7 +10,7 @@
     <td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
     <td><%= post.text %></td>
     <td><% post.categories.each do |category| %>
-        <%= post.category.name %>
+        <%= category.name %>
         <% end %></td>
     <td><div id="index_favorite_<%= post.id %>">
           <%= render 'favorites/favorite', post: post %>
