--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,39 @@
 <div class="row">
   <div class="col-md-8">
-    <%= attachment_image_tag(@post, :post_image, :fill, 190, 190, fallback: "noimage.jpeg") %>
-    <p>タイトル:<%= @post.title %></p>
-    <p>説明:<%= @post.text %></p>
-    <p>投稿日時:<%= @post.created_at.strftime('%Y/%m/%d') %></p>
-    <%= attachment_image_tag(@user, :profile_image, fallback: "noimage.jpeg", class:"profile-img-circle", size: "30x30")%>
-    <%= @user.name %>
-
-    <div id="show_favorite_<%= @post.id %>">
-      <%= render 'favorites/favorite', post: @post, posts: @posts %>
-    </div>
+    <h2>投稿記事</h2>
+  <table class='table'>
+    <tr><%= link_to @post do %>
+        <%= attachment_image_tag(@post, :post_image, :fill, 220, 220, fallback: "noimage.jpeg") %>
+        <% end %></tr>
+    <tr>
+      <th>タイトル</th>
+      <th><%= @post.title %></th>
+    </tr>
+    <tr>
+      <th>本文</th>
+      <th><%= @post.text %></th>
+    </tr>
+    <tr>
+      <th>投稿日時</th>
+      <th><%= @post.created_at.strftime('%Y/%m/%d') %></th>
+    </tr>
+    <tr>
+      <th>カテゴリー</th>
+      <th><% @post.categories.each do |category| %>
+        <%= category.name %>
+        <% end %></th>
+    </tr>
+    <tr>
+      <td><div id="index_favorite_<%= @post.id %>">
+            <%= render 'favorites/favorite', post: @post, posts: @posts %>
+          </div></td>
+    </tr>
+  </table>
   </div>
+</div>
+
+
+
+<div class='row'>
+  <%= link_to '投稿情報編集',edit_post_path(@post),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@post.id}" %>
 </div>
