--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,6 +23,24 @@
 
 
 
+<script>
+$(document).on("turbolinks:load", function(){
+  function readURL(input) {
+    if(input.files && input.files[0]){
+      var reader = new FileReader();
+      reader.onload = function (e) {
+        $('#img_prev').attr('src', e.target.result);
+      }
+      reader.readAsDataURL(input.files[0]);
+    }
+  }
+  $("#user_profile_image").change(function(){
+    readURL(this);
+  });
+});
+</script>
+
+
 
 <script>
 $(document).on("turbolinks:load", function(){
@@ -35,7 +53,7 @@ $(document).on("turbolinks:load", function(){
       reader.readAsDataURL(input.files[0]);
     }
   }
-  $("#profile_profile_image").change(function(){
+  $("#user_profile_image").change(function(){
     readURL(this);
   });
 });
