--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,33 @@
- <div class='row'>
-    <div class='col-md-3'>
-      <h2>User info</h2>
-      <%= render 'info', user: current_user %>
-      <h2 class="mt-3">New book</h2>
-      <%= render 'books/form', book: @book %>
-      </div>
-      <div class='col-md-8'>
+<div class='row'>
+  <div class='col-md-9'>
       <h2>ユーザ一覧</h2>
       <table class='table'>
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th>プロフィール画像</th>
+      <th>ユーザー名</th>
       <th colspan="6"></th>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= attachment_image_tag(@user, :profile_image, :fill, 50, 50, fallback: "noimage.jpeg") %></td>
-        <td><%= @user.name %></td>
-        <td>フォロー数 : <%= @user.follower.count %></td>
-        <td>フォロワー数 : <%= @user.followed.count %></td>
-        <td><% unless user == current_user %>
-              <% if current_user.following?(user) %>
-                <%= link_to 'フォロー外す', user_relationships_path(user), method: :DELETE %>
-              <% else %>
-                <%= link_to 'フォローする', user_relationships_path(user), method: :POST %>
-              <% end %>
-            <% end %></td>
-        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+        <td><%= attachment_image_tag(user, :profile_image, :fill, 30, 30, fallback: "noimage.jpeg") %></td>
+        <td><%= user.name %></td>
+        <td><div class="follower">
+          <%= link_to followers_user_path(user.id) do %>
+          <h8 style="color: black;">フォロワー:<%= user.followers.count %></h5>
+          <% end %>
+        </div></td>
+        <td><div class="follow">
+          <%= link_to following_user_path(user.id) do %>
+            <h8 style="color: black;">フォロー:<%= user.following.count %></h5>
+          <% end %>
+        </div></td>
+        <td><div>
+          <%= render "follow_form" %>
+        </div></td>
+        <td><%= link_to 'ユーザー詳細', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
   </tbody>
