--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,6 +20,7 @@
     <% end %>
   </div>
   <div class="col-md-9">
+
     <table class='table table-hover table-inverse'>
       <thead>
         <tr>
@@ -35,6 +36,7 @@
         <%= render 'post_new', posts: @posts, post: @post %>
       </tbody>
     </table>
+     <%= paginate @posts %>
   </div>
 </div>
 
