--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
     <tr>
       <th>プロフィール画像</th>
       <th>ユーザー名</th>
+      <th>フォロー</th>
       <th colspan="6"></th>
     </tr>
   </thead>
@@ -25,7 +26,7 @@
           <% end %>
         </div></td>
         <td><div>
-          <%= render "follow_form" %>
+          <%= render "follow_form", user: @user %>
         </div></td>
         <td><%= link_to 'ユーザー詳細', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
