--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,48 +13,18 @@
         	</tr>
         	<tr>
         	  <th>フォロー数：</th>
-        	  <th><%= current_user.followers.count %></th>
+        	  <th><%= current_user.followers.count %>人</th>
         	</tr>
         	<tr>
         	  <th>フォロワー数：</th>
-        	  <th><%= current_user.following.count %></th>
+        	  <th><%= current_user.following.count %>人</th>
         	</tr>
         </table>
-        <table>
-          <caption>フォロー中</caption>
-          <thead>
-            <tr>
-            <th>ユーザー名</th>
-            <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @following_users.each do |following_user| %>
-            <tr>
-              <td><%= following_user.name %></td>
-              <td><%= link_to 'フォロー外す', user_relationships_path(following_user.id), method: :delete %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table><br><br>
-
-    <table>
-        <caption>フォロワー</caption>
-        <thead>
-            <tr>
-                <th>フォロワー名</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% @follower_users.each do |follower_user| %>
-            <tr>
-                <td><%= follower_user.name %></td>
-            </tr>
-            <% end %>
-        </tbody>
-    </table>
+        <div>
+          <%= render "follow_form" %>
+        </div>
     </div>
 </div>
 <div class='row'>
-  <%= link_to 'ユーザー情報',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
+  <%= link_to 'ユーザー情報編集',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
 </div>
