ランキング機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+       <p id="notice"><%= notice %></p>
       <%= render 'layouts/sidebar' %>
       <%= yield %>
     </div>
