--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,12 +1,8 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="about">
-        <%= image_tag 'egg.jpeg', :size =>'1000x600' %>
-        <p>ごはんの日。<br>
-        白米好きの<br>
-        白米好きによる<br>
-        白米好きのための<br>
-        おかず紹介サイト</p>
+            <%= image_tag 'logoo.png', :size => '600x600' %><br>
+        ごはんの日。
         </div>
     </div>
 </div>
