--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
-    <div class="col-lg-12">
-        <%= image_tag 'logoo.png', :size => '600x600' %><br>
-        ごはんの日。
+    <div class="col-lg-10">
+        <%= image_tag 'top.jpeg', :size =>'800x500' %>
     </div>
 </div>
