--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-2 col-lg-4">
     サイドバー<br>
     <%= link_to "新規投稿", new_post_path %><br>
     <%= link_to "カテゴリ一覧", categories_path %><br>
