--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,21 +2,21 @@
     <div class="col-md-8">
     <h2>ユーザー編集</h2>
     <%= form_with model:@user, local:true do |f| %>
+     <div class="form-group">
+        <%= f.label :プロフィール画像 %><br>
+        <%= attachment_image_tag @user, :profile_image, fallback: "noimage.jpeg", id: "img_prev", style: "height: 250px; width:300px;" %><br>
+        <%= f.attachment_field :profile_image, class: "form-control-file user_image" %>
+      </div>
       <div class="form-group">
         <%= f.label :ユーザー名 %>
         <%= f.text_field :name, class: "form-control name" %>
-      </div>
-     <div class="form-group">
-        <%= f.label :プロフィール画像 %>
-        <%= attachment_image_tag @user, :profile_image, fallback: "noimage.jpeg", id: "img_prev", style: "height: 250px; width:300px;" %><br>
-        <%= f.attachment_field :profile_image, class: "form-control-file user_image" %>
       </div>
       <div class="form-group">
         <%= f.label :紹介文 %>
         <%= f.text_area :introduction, class: "form-control introduction" %>
       </div>
       <div class="form-group">
-        <%= f.submit class: 'btn btn-secondary' %>
+        <%= f.submit '編集完了', class: 'btn btn-secondary' %>
       </div>
     <% end %>
   </div>
