--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
     <div class='col-md-9'>
       <h2>ユーザー情報</h2>
         <table class='table'>
-          <tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "noimage.jpeg") %></tr>
+          <tr><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: "noimage.jpeg") %></tr>
           <tr>
         	  <th>名前</th>
         	  <th><%= @user.name %></th>
@@ -12,19 +12,39 @@
         	  <th><%= @user.introduction %></th>
         	</tr>
         	<tr>
-        	  <th>フォロー数：</th>
+        	  <th>フォロー数</th>
         	  <th><%= current_user.followers.count %>人</th>
         	</tr>
         	<tr>
-        	  <th>フォロワー数：</th>
+        	  <th>フォロワー数</th>
         	  <th><%= current_user.following.count %>人</th>
         	</tr>
         </table>
         <div>
           <%= render "follow_form" %>
         </div>
+         <% if @user == current_user %>
+  <%= link_to 'ユーザー情報編集', edit_user_path(@user),class: "btn btn-outline-secondary fas fa-user-cog edit_user_#{@user.id}" %>
+  <% end %>
     </div>
-</div>
-<div class='row'>
-  <%= link_to 'ユーザー情報編集',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
+    <div class="col-md-8">
+      <h2>ユーザー投稿</h2>
+        <table class='table table-hover table-inverse'>
+          <thead>
+            <tr>
+              <th>画像</th>
+              <th>投稿者</th>
+              <th>タイトル</th>
+              <th>本文</th>
+              <th>カテゴリー</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <%= render 'posts/post_new', posts: @posts, post: @post %>
+          </tbody>
+        </table>
+         <%= paginate @posts %>
+      </div>
+    </div>
 </div>
