--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<div class='row'>
-  <div class='col-md-9'>
+<div class='col-md-10 col-lg-9'>
       <h2>ユーザ一覧</h2>
       <table class='table'>
   <thead>
@@ -33,5 +32,4 @@
     <% end %>
   </tbody>
 </table>
-    </div>
-  </div>
+</div>
