--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,11 @@
-<div class="row">
-  <div class="col-md-3">
+<div class='col-md-3 col-lg-3'>
     <%= form_with model: @category, local: true do |f| %>
       <%= f.label :name, 'カテゴリー名' %><br>
       <%= f.text_field :name, class:'form-control' %><br>
       <%= f.submit '追加', class: 'btn btn-success btn-block' %>
     <% end %>
   </div>
-  <div class="col-md-6">
+  <div class='col-md-6 col-lg-6'>
     <table class='table table-hover table-inverse'>
       <thead>
         <tr>
@@ -26,5 +25,4 @@
         <% end %>
       </tbody>
     </table>
-  </div>
 </div>
