--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,17 @@
-<header class="shadow-sm">
+<header class="shadow-sm" style="height:90px;">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.jpg', :size =>'170x40' %></a>
+      <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.jpg', :size =>'210x60' %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-            <li><%= link_to "投稿一覧", posts_path %></li>
-            <li><%= link_to "カテゴリ一覧", categories_path %></li>
-            <li><%= link_to "マイページ", user_path(current_user) %></li>
-            <li><%= link_to "ユーザー一覧", users_path %></l>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            <li class="nav-item"><%= link_to "投稿一覧", posts_path, class: 'nav-link text-dark' %></li>
+            <li class="nav-item"><%= link_to "カテゴリ一覧", categories_path, class: 'nav-link text-dark' %></li>
+            <li class="nav-item"><%= link_to "ユーザー一覧", users_path, class: 'nav-link text-dark' %></l>
+            <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% else %>
             <li><%= link_to "ABOUT", home_about_path %></li>
             <li><%= link_to "新規登録", new_user_registration_path %></li>
