--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
- <div class='row'>
-    <div class='col-md-9'>
+<div class='col-md-8 col-lg-8'>
       <h2>ユーザー情報</h2>
         <table class='table'>
           <tr><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: "noimage.jpeg") %></tr>
@@ -26,8 +25,6 @@
          <% if @user == current_user %>
   <%= link_to 'ユーザー情報編集', edit_user_path(@user),class: "btn btn-outline-secondary fas fa-user-cog edit_user_#{@user.id}" %>
   <% end %>
-    </div>
-    <div class="col-md-8">
       <h2>ユーザー投稿</h2>
         <table class='table table-hover table-inverse'>
           <thead>
@@ -45,6 +42,33 @@
           </tbody>
         </table>
          <%= paginate @posts %>
-      </div>
-    </div>
+</div>
+<div class="col-md-2 col-lg-2">
+  <div class="myrank">
+          <h3>投稿ランキング</h3>
+          <% lastFavorite = 0 %>
+            <% j = 1 %>
+            <% @my_ranks.each.with_index(1) do |myranking, i| %>
+              <% if i == 1 %>
+                <% lastFavorite = myranking.favorites.count %>
+              <% end %>
+              <% if myranking.favorites.count != lastFavorite %>
+                <% j = i %>
+                第<%= j %>位<br>
+                <%= link_to myranking.user do %>
+                <%= attachment_image_tag(myranking, :post_image, :fill, 80, 80, fallback: "noimage.jpeg") %><br>
+              <% end %>
+                いいね数：<%= myranking.favorites.count %>
+                <% lastFavorite = myranking.favorites.count %>
+              <% else %>
+                <% lastFavorite = myranking.favorites.count %>
+                第<%= j %>位<br>
+                <%= link_to myranking.user do %>
+                <%= attachment_image_tag(myranking, :post_image, :fill, 80, 80, fallback: "noimage.jpeg") %><br>
+              <% end %>
+                いいね数：<%= myranking.favorites.count %>
+              <% end %>
+              <br>
+              <% end %>
+  </div>
 </div>
