--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-lg-10">
-        <%= image_tag 'top.jpeg', :size =>'800x500' %>
+        <%= image_tag 'top.jpg', :size =>'800x500' %>
     </div>
 </div>
