--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
           </div>
           <div class="col-md-8 col-lg-9">
             <div class="pull-right">
-              <%= image_tag 'logologo-white.png', :size =>'50x50' %>
+              <%= image_tag asset_path('logologo-white.png', :size =>'50x50'） %>
             </div>
           </div>
         </div>
