--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
 <div class="col-lg-10">
-    <%= image_tag '/assets/images/top.jpg', :size =>'800x500' %>
+    <%= image_tag asset_path('top.jpg', :size =>'800x500'） %>
 </div>
 
