--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
     <div class="about">
-        <%= image_tag asset_path('logoo.png', :size => '600x600'） %><br>
+        <%= image_tag 'logoo.png', :size => '600x600' %><br>
     ごはんの日。
     </div>
 </div>
