--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
     <tr>
       <th>カテゴリー</th>
       <th><% @post.categories.each do |category| %>
-        <%= category.name %>
+        <%= category.name %>/
         <% end %></th>
     </tr>
     <tr>
