--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <div class="row" style="padding-top:50px; margin-bottom:50px;">
-       <p id="notice"><%= notice %></p>
+      <%= render 'layouts/flash' %>
+      <div class="row" style="padding-top:50px; padding-bottom: 100px;">
       <%= render 'layouts/sidebar' %>
       <%= yield %>
       </div>
