--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
     <div class="about">
-        <%= image_tag 'logoo.png', :size => '600x600' %><br>
-    ごはんの日。
+        <%= image_tag 'logoo.png', :size => '300x300' %>
+        美味しいごはんで健康な毎日を。今日は<h3>ごはんの日。</h3>
     </div>
 </div>
