--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4 col-lg-3">
-            <p>日本の心「お米」の価値を見直そう。</p>
+            <p>ほかほかごはんを食べよう</p>
             <p>© rara</p>
           </div>
           <div class="col-md-8 col-lg-9">
