--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class='col-md-10 col-lg-9'>
-      <h2>ユーザ一覧</h2>
+      <h2>ユーザ一覧<%= image_tag 'h2.png', :size =>'40x40' %></h2>
       <table class='table'>
   <thead>
     <tr>
