--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,15 @@
 <% if user_signed_in? %>
     <% if current_user.already_favorited?(post) %>
         <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-            <i class="fa fa-heart" aria-hidden="true" style="color: red;">
+            <!--<i class="fa fa-heart" aria-hidden="true" style="color: red;">-->
+                <%= image_tag 'iine.png', :size =>'20x20' %>
                 <%= post.favorites.count %>
             </i>
         <% end %>
     <% else %>
         <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-            <i class="fa fa-heart" aria-hidden="true" style="color: #C0C0C0;">
+            <!--<i class="fa fa-heart" aria-hidden="true" style="color: #C0C0C0;">-->
+            <%= image_tag 'blackoni.png', :size =>'20x20' %>
                 <%= post.favorites.count %>
             </i>
         <% end %>
