--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,11 +10,12 @@
           <% if user_signed_in? %>
             <li class="nav-item"><%= link_to "投稿一覧", posts_path, class: 'nav-link text-dark' %></li>
             <li class="nav-item"><%= link_to "ユーザー一覧", users_path, class: 'nav-link text-dark' %></l>
+            <li class="nav-item"><%= link_to "カテゴリー一覧", categories_path, class: 'nav-link text-dark' %></li>
             <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% else %>
-            <li><%= link_to "ABOUT", home_about_path %></li>
-            <li><%= link_to "新規登録", new_user_registration_path %></li>
-            <li><%= link_to "ログイン", new_user_session_path %></li>
+            <li><%= link_to "ABOUT", home_about_path, class: 'nav-link text-dark' %></li>
+            <li><%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %></li>
+            <li><%= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark' %></li>
           <% end %>
           </ul>
         </div>
