--- a/app/views/posts/_post_new.html.erb
+++ b/app/views/posts/_post_new.html.erb
@@ -4,11 +4,11 @@
         <%= attachment_image_tag(post, :post_image, :fill, 190, 190, fallback: "noimage.jpeg") %>
         <% end %></td>
     <td><%= link_to post.user do %>
-        <%= attachment_image_tag(post.user, :profile_image, fallback: "noimage.jpeg", class:"profile-img-circle", size: "30x30") %>
+        <%= attachment_image_tag(post.user, :profile_image, fallback: "noimage.jpeg", class:"profile-img-circle", size: "30x30") %><br>
         <%= post.user.name %>
         <% end %></td>
     <td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
-    <td><%= post.text %></td>
+    <td><%= truncate(post.text, length:10) %></td>
     <td><% post.categories.each do |category| %>
         <%= category.name %>/
         <% end %></td>
