--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -8,7 +8,7 @@
       <% end %>
       </ul>
     <% end %>
-  	<h1>投稿編集</h1>
+  	<h1>投稿編集<%= image_tag 'h2.png', :size =>'40x40' %></h1>
   	  <%= form_with model:@post, local:true do |f| %>
   	  <div class="form-group">
         <%= f.label :投稿画像 %><br>
