--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-8 col-lg-8">
-  <h2>投稿一覧</h2>
+  <h2>投稿一覧<%= image_tag 'h2.png', :size =>'40x40' %></h2>
   <table class='table table-hover table-inverse'>
       <thead>
         <tr>
