--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
  <div class='row'>
     <div class="col-md-8">
-    <h2>ユーザー編集</h2>
+    <h2>ユーザー編集<%= image_tag 'h2.png', :size =>'40x40' %></h2>
     <%= form_with model:@user, local:true do |f| %>
      <div class="form-group">
         <%= f.label :プロフィール画像 %><br>
