--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class='col-md-8 col-lg-8'>
-      <h2>ユーザー情報</h2>
+      <h2>ユーザー情報<%= image_tag 'h2.png', :size =>'40x40' %></h2>
         <table class='table'>
           <tr><%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, fallback: "noimage.jpeg") %></tr>
           <tr>
@@ -12,11 +12,11 @@
         	</tr>
         	<tr>
         	  <th>フォロー数</th>
-        	  <th><%= current_user.followers.count %>人</th>
+        	  <th><%= @user.followers.count %>人</th>
         	</tr>
         	<tr>
         	  <th>フォロワー数</th>
-        	  <th><%= current_user.following.count %>人</th>
+        	  <th><%= @user.following.count %>人</th>
         	</tr>
         </table>
         <div>
@@ -25,7 +25,7 @@
          <% if @user == current_user %>
   <%= link_to 'ユーザー情報編集', edit_user_path(@user),class: "btn btn-outline-secondary fas fa-user-cog edit_user_#{@user.id}" %>
   <% end %>
-      <h2>ユーザー投稿</h2>
+      <h2>ユーザー投稿<%= image_tag 'h2.png', :size =>'40x40' %></h2>
         <table class='table table-hover table-inverse'>
           <thead>
             <tr>
