--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
         <div class="row no-gutters">
           <div class="col-md-4 col-lg-3">
             <p>ほかほかごはんを食べよう</p>
-            <p>© rara</p>
+            <p>© rara<%= image_tag 'ume.png', :size =>'15x15' %></p>
           </div>
           <div class="col-md-8 col-lg-9">
             <div class="pull-right">
