--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-2 col-lg-2">
   <% if user_signed_in? %>
-    <%= link_to "新規投稿", new_post_path, class: 'nav-link text-dark' %><br>
-    <%= link_to "マイページ", user_path(current_user), class: 'nav-link text-dark' %><br>
+    <%= link_to new_post_path, class: 'nav-link text-dark' do %>新規投稿<%= image_tag 'sake.jpg', :size =>'20x20' %><% end %><br>
+    <%= link_to user_path(current_user), class: 'nav-link text-dark' do %>マイページ<%= image_tag 'イラスト.jpg', :size =>'15x15' %><% end %><br>
     <div class="search-form">
       <p>検索<i class="fas fa-search"></i></p>
       <%= form_with url:search_path, method: :get, local: true do |f| %>
