--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,6 +2,7 @@
   <% if user_signed_in? %>
     <%= link_to new_post_path, class: 'nav-link text-dark' do %>新規投稿<%= image_tag 'sake.jpg', :size =>'20x20' %><% end %><br>
     <%= link_to user_path(current_user), class: 'nav-link text-dark' do %>マイページ<%= image_tag 'イラスト.jpg', :size =>'15x15' %><% end %><br>
+    <%= link_to user_favorite_path(current_user), class: 'nav-link text-dark' do %>いいねした記事<%= image_tag 'ume.png', :size =>'20x20' %><% end %><br>
     <div class="search-form">
       <p>検索<i class="fas fa-search"></i></p>
       <%= form_with url:search_path, method: :get, local: true do |f| %>
