--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,15 +29,17 @@
           <% if ranking.favorites.count != lastFavorite %>
             <% j = i %>
             第<%= j %>位<br>
-            <%= link_to ranking.user do %>
+            <%= link_to ranking do %>
             <%= attachment_image_tag(ranking, :post_image, :fill, 200, 200, fallback: "noimage.jpeg") %><br>
+            <% end %>
+            <%= link_to ranking.user do %>
             <%= ranking.user.name %><br>
-          <% end %>
+            <% end %>
             いいね数：<%= ranking.favorites.count %>
             <% lastFavorite = ranking.favorites.count %>
           <% else %>
             <% lastFavorite = ranking.favorites.count %>
-            第<%= j %>位<br>
+            <i class="fas fa-crown"></i>第<%= j %>位<br>
             <%= link_to ranking.user do %>
             <%= attachment_image_tag(ranking, :post_image, :fill, 200, 200, fallback: "noimage.jpeg") %><br>
             <%= ranking.user.name %><br>
