--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="col-lg-10">
-    <%= image_tag 'top2.jpg', :size =>'900x300' %><br><br>
+    <%= image_tag asset_path('top2.jpg'), :size =>'900x300' %><br><br>
 
 
 
